fix: overflow description & categorie on mobile project page

--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,13 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+@media screen and (min-width: 1824px) {
+    body {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        height: 100vh;
+    }
+}
